--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             <div class="form-group">
               <input type="submit" name="submit" value="Submit">
             </div>
+
+            <div class="g-recaptcha" data-sitekey="6LdZlEQqAAAAAAbiMKDDXrsPEnMZK47McijPwamq"></div><br>
+            <input type="submit" name="submit">
         </form>
     </div>
 </body>
