--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="main.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script>
+        function onSubmit(token) {
+            document.getElementById("myForm").submit();
+        }
+    </script>
 </head>
 <body>
     <div class="form-container">
         <div class="form-background"></div>
-        <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DdM00000B46mt" method="POST">
+        <form id="myForm" action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DdM00000B46mt" method="POST">
             <input type="hidden" name="oid" value="00DdM00000B46mt">
             <input type="hidden" name="retURL" value="http://google.com">
 
@@ -48,11 +53,12 @@
             </div>
 
             <div class="form-group">
-              <input type="submit" name="submit" value="Submit">
+                <button class="g-recaptcha custom-button" 
+                        data-sitekey="6Le1lUQqAAAAAOTBhVCb7uCENT9b1dcUctT2Vz2u" 
+                        data-callback='onSubmit' 
+                        data-action='submit'>Submit</button>
             </div>
-
-            <div class="g-recaptcha" data-sitekey="6LdZlEQqAAAAAAbiMKDDXrsPEnMZK47McijPwamq"></div><br>
-            <input type="submit" name="submit">
+              
         </form>
     </div>
 </body>
