--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="main.js"></script>
     <script>
         function onSubmit(token) {
             document.getElementById("myForm").submit();
