--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
 
             <div class="form-group">
                 <label for="company">Company</label>
-                <input id="company" maxlength="40" name="company" size="20" type="text" />
+                <input id="company" maxlength="40" name="company" size="20" type="text" required />
             </div>
 
             <div class="form-group">
                 <label for="first_name">First Name</label>
-                <input id="first_name" maxlength="40" name="first_name" size="20" type="text" />
+                <input id="first_name" maxlength="40" name="first_name" size="20" type="text" required />
             </div>
 
             <div class="form-group">
                 <label for="last_name">Last Name</label>
-                <input id="last_name" maxlength="80" name="last_name" size="20" type="text" />
+                <input id="last_name" maxlength="80" name="last_name" size="20" type="text" required />
             </div>
 
             <div class="form-group">
                 <label for="email">Email</label>
-                <input id="email" maxlength="80" name="email" size="20" type="text" />
+                <input id="email" maxlength="80" name="email" size="20" type="email" required />
             </div>
 
             <div class="form-group">
                 <label for="phone">Phone</label>
-                <input id="phone" maxlength="40" name="phone" size="20" type="text" />
+                <input id="phone" maxlength="40" name="phone" size="20" type="tel" required />
             </div>
 
             <div class="form-group">
                 <label for="00NdM000004ynAI">Product Interest</label>
-                <select id="00NdM000004ynAI" name="00NdM000004ynAI" title="Product Interest">
+                <select id="00NdM000004ynAI" name="00NdM000004ynAI" title="Product Interest" required>
                     <option value="">--None--</option>
                     <option value="GC1000 series">GC1000 series</option>
                     <option value="GC5000 series">GC5000 series</option>
